--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,19 @@ jobs:
 
       - name: Run Go Unit Tests
         run: go test ./... -cover
+
+  style:
+    name: style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.20"
+
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Run Go Format check
+        run: test -z $(go fmt ./...)
