Add proper gosec error to ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Run Go Unit Tests
         run: go test ./... -cover
 
+      - name: install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Run gosec Check
+        run: gosec ./...
+
   style:
     name: style
     runs-on: ubuntu-latest
