--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,3 +20,20 @@ jobs:
 
       - name: Build Go Binary
         run: ./scripts/buildprod.sh
+
+      - name: 'Authenticate with Google Cloud'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+          project_id: notely-402205
+  
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
+        with:
+          version: '>= 363.0.0'
+  
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
+
+      - name: Build and push Docker image to Google Artifact Registry
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-402205/notely-ar-repo/tmbrody/notely:latest .
