--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,15 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out Code
+      - name: 'Check out Code'
         uses: actions/checkout@v3
 
-      - name: Set up Go
+      - name: 'Set up Go'
         uses: actions/setup-go@v4
         with:
           go-version: "1.20"
 
-      - name: Build Go Binary
+      - name: 'Build Go Binary'
         run: ./scripts/buildprod.sh
 
       - name: 'Authenticate with Google Cloud'
@@ -35,5 +35,8 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
 
-      - name: Build and push Docker image to Google Artifact Registry
+      - name: 'Build and push Docker image to Google Artifact Registry'
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-402205/notely-ar-repo/tmbrody/notely:latest .
+
+      - name: 'Deploy to Cloud Run'
+        run:  gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-402205/notely-ar-repo/tmbrody/notely:latest --region us-central1 --allow-unauthenticated --project notely-402205 --max-instances=4
