--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,9 +9,16 @@ jobs:
     name: deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
+
     steps:
       - name: 'Check out Code'
         uses: actions/checkout@v3
+
+      - name: 'Install goose'
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: 'Set up Go'
         uses: actions/setup-go@v4
@@ -24,7 +31,7 @@ jobs:
       - name: 'Authenticate with Google Cloud'
         uses: 'google-github-actions/auth@v1'
         with:
-          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+          credentials_json: GCP_CREDENTIALS
           project_id: notely-402205
   
       - name: 'Set up Cloud SDK'
@@ -37,6 +44,9 @@ jobs:
 
       - name: 'Build and push Docker image to Google Artifact Registry'
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-402205/notely-ar-repo/tmbrody/notely:latest .
+
+      - name: 'Run MySQL database migrations'
+        run: ./scripts/migrateup.sh
 
       - name: 'Deploy to Cloud Run'
         run:  gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-402205/notely-ar-repo/tmbrody/notely:latest --region us-central1 --allow-unauthenticated --project notely-402205 --max-instances=4
