Update cd.yml to include MySQL database migrations

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,6 @@ jobs:
 
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
 
     steps:
       - name: 'Check out Code'
@@ -31,7 +30,7 @@ jobs:
       - name: 'Authenticate with Google Cloud'
         uses: 'google-github-actions/auth@v1'
         with:
-          credentials_json: $GCP_CREDENTIALS
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
           project_id: notely-402205
   
       - name: 'Set up Cloud SDK'
